--- a/ro/editor/ui/chrome/composer/editor.properties
+++ b/ro/editor/ui/chrome/composer/editor.properties
@@ -135,7 +135,7 @@ Link=Legătură
 Image=imagine
 ImageAndLink=imagine și legătură
 NamedAnchor=ancoră cu nume
-List=listă
+List=Listă
 ListItem=element listă
 Form=formular
 InputTag=câmp formular
