--- a/ro/mail/chrome/messenger/aboutRights.properties
+++ b/ro/mail/chrome/messenger/aboutRights.properties
@@ -2,4 +2,4 @@ aboutRightsTitle=Despre drepturile dumneavoastră
 buttonLabel=Cunoașteți-vă drepturile…
 buttonAccessKey=d
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=%S este software liber și deschis oferit de fundația non-profit Mozilla Foundation.
+notifyRightsText=%S este software liber cu sursa deschisă oferit de fundația non-profit Mozilla Foundation.
