--- a/ro/mail/chrome/messenger/messenger.properties
+++ b/ro/mail/chrome/messenger/messenger.properties
@@ -459,6 +459,11 @@ emptyTrashDontAsk=Nu mă mai întreba altă dată.
 junkAnalysisPercentComplete=Analiza %S de spam completă
 processingJunkMessages=Se procesează mesajele spam
 
+# Messenger bootstrapping messages
+fileNotFoundTitle = Fișierul nu a fost găsit
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Fișierul %S nu există.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=Dumneavoastră
