--- a/pl/toolkit/chrome/mozapps/update/updates.properties
+++ b/pl/toolkit/chrome/mozapps/update/updates.properties
@@ -7,8 +7,8 @@ updateFullName=%S (%S)
 # where update version from the update xml
 # example: MyApplication 10.0.5
 updateName=%S %S
-licenseContentDownloading=Pobieranie licencji dla %S %S…
-updateMoreInfoContentDownloading=Pobieranie szczegółów o %S %S…
+licenseContentDownloading=Pobieranie licencji programu %S %S…
+updateMoreInfoContentDownloading=Pobieranie szczegółowych informacji o programie %S %S…
 intro_major_app_and_version=Czy uaktualnić teraz program %S do wersji %S?
 
 # LOCALIZATION NOTE: The 1st %S is brandShortName and 2nd %S is update version
