L10n for bug 482480 - Text on provided identity information seems contradicting.

--- a/sv-SE/browser/chrome/browser/pageInfo.properties
+++ b/sv-SE/browser/chrome/browser/pageInfo.properties
@@ -75,7 +75,6 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=Webbplatsen har ett certifikat som verifierar dess identitet.
-securityNoIdentity=Webbplatsen har inte lämnat några identitetsuppgifter.
+securityNoOwner=Webbplatsen har inte lämnat någon information om ägaren.
 securityOneVisit=Ja, en gång
 securityNVisits=Ja, %S gånger
