--- a/sv-SE/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/sv-SE/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -42,7 +42,7 @@ rememberPassword = Spara detta lösenord.
 savePasswordTitle = Bekräfta
 # 1st string is product name, 2nd is the username for the login, 3rd is the
 #   login's hostname. Note that long usernames may be truncated.
-saveLoginText = Do you want %1$S to remember the password for "%2$S" on %3$S?
+saveLoginText = Vill du att %1$S sparar lösenordet för ”%2$S” på %3$S?
 # 1st string is product name, 2nd is the login's hostname
 saveLoginTextNoUsername = Vill du att %1$S sparar det här lösenordet för %2$S?
 notNowButtonText = Inte &nu
