update mail dir with minor corrections

--- a/si/mail/chrome/messenger/activity.properties
+++ b/si/mail/chrome/messenger/activity.properties
@@ -1,12 +1,12 @@
 # Status Text
-paused2=Paused
-processing=Processing
-notStarted=Not Started
-failed=Failed
+paused2=අත්හිටුවා ඇත
+processing=සකසමින් සිටියි
+notStarted=ආරම්භ කර නැත
+failed=අසාර්ථක විය
 waitingForInput=Waiting for input
 waitingForRetry=Waiting for retry
-completed=Completed
-canceled=Canceled
+completed=සම්පූර්ණ කළා
+canceled=අවලංගු තළා
 
 # LOCALIZATION NOTE (yesterday): Displayed time for files finished yesterday
 yesterday=Yesterday
@@ -14,15 +14,15 @@ yesterday=Yesterday
 monthDate=#1 #2
 
 # Send Message
-sendingMessage=Sending Message
+sendingMessage=ලිපිය යවමින් සිටියි
 # LOCALIZATION NOTE (sendingMessageTo): %S will be replaced by the first name or newsgroup that the message is being sent to.
-sendingMessageTo=Sending Message to %S
-sentMessage=Sent Message
+sendingMessageTo=%S ට ලිපිය යවමින් සිටියි
+sentMessage=ලිපිය යැව්වා
 # LOCALIZATION NOTE (sentMessageTo): %S will be replaced by the first name or newsgroup that the message was sent to.
-sentMessageTo=Sent Message to %S
-failedToSendMessage=Failed to send message
+sentMessageTo=%S ට ලිපිය යැව්වා
+failedToSendMessage=ලිපිය යැවීම අසාර්ථක විය
 # LOCALIZATION NOTE (failedToSendMessageTo): %S will be replaced by the first name or newsgroup that the message was being sent to.
-failedToSendMessageTo=Failed to send message to %S
+failedToSendMessageTo=%S ට ලිපිය යැවීම අසාර්ථක විය
 
 # LOCALIZATION NOTE (autosyncProcessProgress): Do not translate the word "%1$S", "%2$S" and "%3$S" below.
 # Place the word %1$S in your translation where the number of the message being downloaded should appear.
