--- a/si/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/si/mail/chrome/messenger/addressbook/addressBook.properties
@@ -173,9 +173,9 @@ newAddressBookTitle=නව ලිපින පොත
 renameAddressBookTitle=ලිපින පොතේ ලක්ෂණ
 
 # For corrupt .mab files
-corruptMabFileTitle=සදොස් (Corrupt)  ලිපින පොතේ ගොනුවකි
+corruptMabFileTitle=සදොස් (Corrupt)  ලිපින පොත් ගොනුවකි
 corruptMabFileAlert=One of your address book files (%1$S file) could not be read. A new %2$S file will be created and a backup of the old file, called %3$S, will be created in the same directory.
 
 # For locked .mab files
 lockedMabFileTitle=ලිපින පොත් ගොනුව පූරණය කළ නොහැකිය
-lockedMabFileAlert=%S ලිපින පොත් ගොනුව පූරණය කළ නොහැකිය. එය කියපීමට-පමණක් වූ හෝ වෙනත් යෙදුමක් මඟින් අගුලුළු ගොනුව විය හැකිය. කරුණාකර පසුව උත්සාහ කරන්න.
+lockedMabFileAlert=%S ලිපින පොත් ගොනුව පූරණය කළ නොහැකිය. එය කියපීමට-පමණක් වූ හෝ වෙනත් යෙදුමක් මඟින් අගුලුළු ගොනුවක් විය හැකිය. කරුණාකර පසුව උත්සාහ කරන්න.
