--- a/si/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/si/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -56,7 +56,7 @@
 12505=ඇමුණුම් පූරණය කරමින් ති‌බේ...
 
 ## @name NS_MSG_COULDNT_OPEN_FCC_FOLDER
-12506=යැවූලිපි ෆෝල්ඩරය විවෘත කළ නෙොහැකි විය. කරැණාකර ඔබගේ මනාපයන් (Mail Preferences)නිවැරදිදැයි පරීක්ෂා කරන්න.
+12506=යැවූලිපි ෆෝල්ඩරය විවෘත කළ නොහැකි විය. කරුණාකර ඔබගේ මනාපයන් (Mail Preferences)නිවැරදිදැයි පරීක්ෂා කරන්න.
 
 ## @name NS_MSG_CANT_POST_TO_MULTIPLE_NEWS_HOSTS
 12507=Can't post to multiple news hosts. Try again.
@@ -74,7 +74,7 @@
 12511=ලබන්නා දක්වා ‌නොමැත. කරුණාකර ලිපින තීරු‌වේ ලබන්නා සදහන් කරන්න.
 
 ## @name NS_MSG_ERROR_WRITING_FILE
-12512=තාවකාලික ගොනුව ලිවී‌‌මේදී දා්ෂයක්.
+12512=තාවකාලික ගොනුව ලිවී‌‌මේදී දෝෂයක්.
 
 ## @name NS_ERROR_SENDING_FROM_COMMAND
 12514=ලිපිය යවමින් සිටියදී දෝෂයක්. ‌සේවාදායකය ප්‍රතිචාර දක්වයි: %s. කරුණාකර ඔබගේ ලිපි මනාපයන් (Mail Preferences)තුළ ලිපිනය නිවැරදිදැයි සහතික කර නැවත උත්සාහ කරන්න.
@@ -110,7 +110,7 @@
 12525=පසුව යැවීමට ඔබගේ ලිපිය සුරැකීමට ‌නොහැකිය.
 
 ## @name NS_ERROR_COMMUNICATIONS_ERROR
-12526=න්නිවේදන‌යේ ‌දෝෂයක්: %d.  නැවත උත්සාහ කරන්න.
+12526=සන්නිවේදන‌යේ ‌දෝෂයක්: %d.  නැවත උත්සාහ කරන්න.
 
 ## @name NS_ERROR_BUT_DONT_SHOW_ALERT
 12527=THIS IS JUST A PLACEHOLDER.  YOU SHOULD NEVER SEE THIS STRING.
@@ -134,7 +134,7 @@
 12534=ලිපිය ‌තොරතුරු එකලස්කරමින් සිටී...
 
 ## @name NS_MSG_GATHERING_ATTACHMENT
-12535=%s අමුණමින්...
+12535=%s අමුණමින් සිටී...
 
 ## @name NS_MSG_CREATING_MESSAGE
 12536=ලිපිය සාදමින් සිටී....
@@ -152,7 +152,7 @@
 12540=කොපි කිරීම අසාර්ථක විය.
 
 ## @name NS_MSG_LARGE_MESSAGE_WARNING
-12541=අවවාදයයි!  %d byte ප්‍රමාණයේ ලිපියක් ගැනීමට සූදානම්ව සිටී. ඔබට එය කිරීමට අවශ්‍ය බව විහ්වාසද??
+12541=අවවාදයයි!  %d byte ප්‍රමාණයේ ලිපියක් ගැනීමට සූදානම්ව සිටී. ඔබට එය කිරීමට අවශ්‍ය බව විශ්වාසද?
 
 ## @name NS_SMTP_PASSWORD_PROMPT1
 12543=%S සදහා ඔබ‌ගේ රහස් පදය ඇතුලු කරන්න:
@@ -182,7 +182,7 @@
 12557=පසුව යැවී‌මේ ‌දෝෂයක්
 
 ## @name NS_MSG_SAVE_DRAFT_TITLE
-12558=කෙටම්පත සුරැකී‌මේ දෝෂයක්
+12558=කෙටුම්පත සුරැකී‌මේ දෝෂයක්
 
 ## @name NS_MSG_SAVE_TEMPLATE_TITLE
 12559=ආකෘතිය සුරැකී‌මේ දෝෂයක්
@@ -225,7 +225,7 @@
 12580=ලිපිය යැවීමේදී දෝෂයක් ඇතිවිය:  SMTP සේවාදායකය %S ට සත්‍යාපනය කළ නොහැකිය. සේවාදායකය කිසිඳු අනුකූල ආරක්ෂිත සත්‍යාපන සඳහා සහාය නොදන්වයි, නමුත් ඔබ තෝරා ඇත්තේ ආරක්ෂිත සත්‍යාපනයයි. ආරක්ෂිත සත්‍යාපනයයට වසා දමා උත්සාහ කරන්න  හෝ ඔබගේ  සේවා සපයන්නා හමුවන්න.
 
 ## @name NS_ERROR_COULD_NOT_LOGIN_TO_SMTP_SERVER_AUTH_NONE
-12581=ලිපිය යැවීමේදී දෝෂයක් ඇතිවිය:  SMTP සේවාදායකය %S ට සත්‍යාපනය කළ නොහැකිය.  එය (SMTP-AUTH) සත්‍යාපනය සඳහා සහාය නොදන්වයි, නමුත් ඔබ සත්‍යාපනය සඳහා තෝරා ඇත. එම සේවාදායකය සඳහා 'නම සහ රහස්පදය භාවිතා කරන්න' සළනුණු හරින්නහෝ ඔබගේ  සේවා සපයන්නා හමුවන්න.
+12581=ලිපිය යැවීමේදී දෝෂයක් ඇතිවිය:  SMTP සේවාදායකය %S ට සත්‍යාපනය කළ නොහැකිය.  එය (SMTP-AUTH) සත්‍යාපනය සඳහා සහාය නොදන්වයි, නමුත් ඔබ සත්‍යාපනය සඳහා තෝරා ඇත. එම සේවාදායකය සඳහා 'නම සහ රහස්පදය භාවිතා කරන්න' සළකුණු හරින්න හෝ ඔබගේ  සේවා සපයන්නා හමුවන්න.
 
 ## @name NS_ERROR_STARTTLS_FAILED_EHLO_STARTTLS
 12582=An error occurred sending mail: Unable to establish a secure link with SMTP server %S using STARTTLS since it doesn't advertise that feature. Switch off STARTTLS for that server or contact your service provider.
@@ -278,13 +278,13 @@ windowTitlePrefix=ලිපි ලිවීම:
 
 ## String used by the dialog that ask the user to enter a subject
 sendMsgTitle=ලිපි යැවීම
-subjectDlogMessage=ඔබ ලිපි මාතෘකාවක් යොදා නැත. එය ඇතුලත් කිරීම අවශ්‍ය නම්, කරැණාකර දැන් එය ඇතුලත් කරන්න.
+subjectDlogMessage=ඔබ ලිපි මාතෘකාවක් යොදා නැත. එය ඇතුලත් කිරීම අවශ්‍ය නම්, කරුණාකර දැන් එය ඇතුලත් කරන්න.
 
 ## String used by the dialog that informs the user about the newsgroup recipient
 recipientDlogMessage=This account only supports email recipients. Continuing will ignore newsgroups.
 
 #String used by the alert that tells the user an e-mail address is invalid
-addressInvalid=%1$S යනු වලංගු වි.තැ. ලිපිනයක් නොවේ එනම් එය user@host ආකාරයෙන් නොවේ. ලිපිය යැවීමට පෙර එන නිවැරදි ඛල යුතුමය.
+addressInvalid=%1$S යනු වලංගු වි.තැ. ලිපිනයක් නොවේ එනම් එය user@host ආකාරයෙන් නොවේ. ලිපිය යැවීමට පෙර එය නිවැරදි ඛල යුතුමය.
 ## String used by the dialog that ask the user to attach a web page
 attachPageDlogTitle=කරුණාකර ඇමුණුම ඇති ස්ථානය දක්වන්න
 attachPageDlogMessage=වෙබ් පිටුව (URL):
