--- a/et/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/et/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -19,19 +19,19 @@ downloadErrorAlertTitle=Viga allalaadimisel
 downloadErrorGeneric=Allalaaditud faili ei saa salvestada, sest esines tundmatu viga.\n\nPalun proovi uuesti.
 
 quitCancelDownloadsAlertTitle=Katkesta kõik allalaadimised?
-quitCancelDownloadsAlertMsg=Kui sa väljud nüüd, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahad väljuda?
-quitCancelDownloadsAlertMsgMultiple=Kui sa väljud nüüd, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad väljuda?
-quitCancelDownloadsAlertMsgMac=Kui sa väljud nüüd, siis katkestatakse allalaadimine. Oled sa kindel, et tahad väljuda?
-quitCancelDownloadsAlertMsgMacMultiple=Kui sa väljud nüüd, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad väljuda?
+quitCancelDownloadsAlertMsg=Kui sa väljud nüüd, siis katkestatakse 1 allalaadimine. Kas oled kindel, et tahad väljuda?
+quitCancelDownloadsAlertMsgMultiple=Kui sa väljud nüüd, siis katkestatakse %S allalaadimist. Kas oled kindel, et tahad väljuda?
+quitCancelDownloadsAlertMsgMac=Kui sa väljud nüüd, siis katkestatakse allalaadimine. Kas oled kindel, et tahad väljuda?
+quitCancelDownloadsAlertMsgMacMultiple=Kui sa väljud nüüd, siis katkestatakse %S allalaadimist. Kas oled kindel, et tahad väljuda?
 offlineCancelDownloadsAlertTitle=Katkesta kõik allalaadimised?
-offlineCancelDownloadsAlertMsgMultiple=Kui sa lähed nüüd võrguta olekusse, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad võrguta olekusse minna?
-offlineCancelDownloadsAlertMsg=Kui sa lähed nüüd võrguta olekusse, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahad võrguta olekusse minna?
-enterPrivateBrowsingCancelDownloadsAlertTitle=Katkesta kõik allalaadimised?
-enterPrivateBrowsingCancelDownloadsAlertMsg=Kui sa lähed nüüd privaatse veebilehitsemise olekusse, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahad lülituda privaatse veebilehitsemise olekusse?
-enterPrivateBrowsingCancelDownloadsAlertMsgMultiple=Kui sa lähed nüüd privaatse veebilehitsemise olekusse, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad lülituda privaatse veebilehitsemise olekusse?
+offlineCancelDownloadsAlertMsgMultiple=Kui sa lähed nüüd võrguta olekusse, siis katkestatakse %S allalaadimist. Kas oled kindel, et tahad võrguta olekusse minna?
+offlineCancelDownloadsAlertMsg=Kui sa lähed nüüd võrguta olekusse, siis katkestatakse 1 allalaadimine. Kas oled kindel, et tahad võrguta olekusse minna?
+enterPrivateBrowsingCancelDownloadsAlertTitle=Kas katkesta kõik allalaadimised?
+enterPrivateBrowsingCancelDownloadsAlertMsg=Kui sa lähed nüüd privaatse veebilehitsemise olekusse, siis katkestatakse 1 allalaadimine. Kas oled kindel, et tahad lülituda privaatse veebilehitsemise olekusse?
+enterPrivateBrowsingCancelDownloadsAlertMsgMultiple=Kui sa lähed nüüd privaatse veebilehitsemise olekusse, siis katkestatakse %S allalaadimist. Kas oled kindel, et tahad lülituda privaatse veebilehitsemise olekusse?
 leavePrivateBrowsingCancelDownloadsAlertTitle=Katkesta kõik allalaadimised?
-leavePrivateBrowsingCancelDownloadsAlertMsg=Kui sa väljud nüüd privaatse veebilehitsemise olekust, siis katkestatakse 1 allalaadimine. Oled sa kindel, et tahad privaatse veebilehitsemise olekust väljuda?
-leavePrivateBrowsingCancelDownloadsAlertMsgMultiple=Kui sa väljud nüüd privaatse veebilehitsemise olekust, siis katkestatakse %S allalaadimist. Oled sa kindel, et tahad privaatse veebilehitsemise olekust väljuda?
+leavePrivateBrowsingCancelDownloadsAlertMsg=Kui sa väljud nüüd privaatse veebilehitsemise olekust, siis katkestatakse 1 allalaadimine. Kas oled kindel, et tahad privaatse veebilehitsemise olekust väljuda?
+leavePrivateBrowsingCancelDownloadsAlertMsgMultiple=Kui sa väljud nüüd privaatse veebilehitsemise olekust, siis katkestatakse %S allalaadimist. Kas oled kindel, et tahad privaatse veebilehitsemise olekust väljuda?
 cancelDownloadsOKText=Katkesta 1 allalaadimine
 cancelDownloadsOKTextMultiple=Katkesta %S allalaadimist
 dontQuitButtonWin=Ära välju
