--- a/ca/browser/chrome/browser/pageInfo.properties
+++ b/ca/browser/chrome/browser/pageInfo.properties
@@ -78,8 +78,7 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=El lloc web proporciona un certificat per a verificar-ne la identitat.
-securityNoIdentity=El lloc web no proporciona cap informació d'identitat.
+securityNoOwner=Aquest lloc web no proporciona cap informació de pertinença.
 securityOneVisit=Sí, una vegada
 securityNVisits=Sí, %S vegades
 
