--- a/ca/security/manager/chrome/pipnss/pipnss.properties
+++ b/ca/security/manager/chrome/pipnss/pipnss.properties
@@ -123,6 +123,8 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
+CertDumpSurname=Cognoms
+CertDumpGivenName=Nom donat
 CertDumpValidity=Validesa
 CertDumpNotBefore=No abans
 CertDumpNotAfter=No després
