--- a/ca/browser/updater/updater.ini
+++ b/ca/browser/updater/updater.ini
@@ -1,4 +1,4 @@
 ; This file is in the UTF-8 encoding
 [Strings]
-Title=Actualització del programari
+TitleText=Actualització del %MOZ_APP_DISPLAYNAME%
 InfoText=El %MOZ_APP_DISPLAYNAME% està instaŀlant les actualitzacions i s'iniciarà en breus moments…
