--- a/ca/mobile/chrome/browser.properties
+++ b/ca/mobile/chrome/browser.properties
@@ -1,3 +1,7 @@
+# Bookmarks
+editBookmarkAddFolder=Afegeix una carpeta nova
+editBookmarkNewFolder=Nova carpeta
+
 # Popup Blocker
 popupWarning=El %S ha evitat que aquest lloc obri una finestra emergent.
 popupWarningMultiple=El %S ha evitat que aquest lloc obri %S finestres emergents.
