update cal files with more-translated strings

--- a/si/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/si/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -42,7 +42,7 @@
 # #1 - number
 # e.g. "every 4 days"
 dailyEveryNth=every day;every #1 days
-repeatDetailsRuleDaily4=every weekday
+repeatDetailsRuleDaily4=සෑම සතියේ දිනකම
 
 # LOCALIZATION NOTE (weeklyNthOn)
 # Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
@@ -221,7 +221,7 @@ repeatDetailsInfiniteAllDay=Occurs %1$S\neffective %2$S.
 # LOCALIZATION NOTE (ruleTooComplex):
 # This string is shown in the reminder details area if our code can't handle the
 # complexity of the recurrence rule yet.
-ruleTooComplex=Click here for details
+ruleTooComplex=විස්තර සඳහා මෙහි ක්ලික් කරන්න
 
 newEvent=නව සිදුවීමක්
 newTask=නව කාර්යයක්
@@ -237,7 +237,7 @@ summaryDueTaskLabel=නියමිත:
 # Attach File Dialog
 selectAFile=Please select the file(s) to attach
 removeCalendarsTitle=ඇමුණුම ඉවත්කිරීම
-removeCalendarsText=ඔබට නැසැකවම %1$S ඇමුණුම ඉවත්කිරීමට අවශ්‍යද?
+removeCalendarsText=ඔබට නිසැකවම %1$S ඇමුණුම ඉවත්කිරීමට අවශ්‍යද?
 
 # Recurrence Dialog Widget Order
 # LOCALIZATION NOTE: You can change the order of below params
