--- a/si/calendar/chrome/calendar/timezones.properties
+++ b/si/calendar/chrome/calendar/timezones.properties
@@ -60,7 +60,7 @@ pref.timezone.Africa.Asmara=Africa/Asmara
 pref.timezone.Africa.Bamako=Africa/Bamako
 pref.timezone.Africa.Bangui=Africa/Bangui
 pref.timezone.Africa.Banjul=Africa/Banjul
-pref.timezone.Africa.Bissau=Africa/Bissau
+pref.timezone.Africa.Bissau=අප්‍රිකාව/බිසවු
 pref.timezone.Africa.Blantyre=Africa/Blantyre
 pref.timezone.Africa.Brazzaville=Africa/Brazzaville
 pref.timezone.Africa.Bujumbura=Africa/Bujumbura
@@ -68,7 +68,7 @@ pref.timezone.Africa.Cairo=අප්‍රිකාව/කයිරෝ
 pref.timezone.Africa.Casablanca=Africa/Casablanca
 pref.timezone.Africa.Ceuta=Africa/Ceuta
 pref.timezone.Africa.Conakry=Africa/Conakry
-pref.timezone.Africa.Dakar=Africa/Dakar
+pref.timezone.Africa.Dakar=අප්‍රිකාව/ඩකා
 pref.timezone.Africa.Dar_es_Salaam=Africa/Dar es Salaam
 pref.timezone.Africa.Djibouti=Africa/Djibouti
 pref.timezone.Africa.Douala=Africa/Douala
@@ -79,20 +79,20 @@ pref.timezone.Africa.Harare=අප්‍රිකාව/හරාරේ
 pref.timezone.Africa.Johannesburg=Africa/Johannesburg
 pref.timezone.Africa.Kampala=අප්‍රිකාව/කම්පාලා
 pref.timezone.Africa.Khartoum=Africa/Khartoum
-pref.timezone.Africa.Kigali=Africa/Kigali
-pref.timezone.Africa.Kinshasa=Africa/Kinshasa
+pref.timezone.Africa.Kigali=අප්‍රිකාව/කිගාලි
+pref.timezone.Africa.Kinshasa=අප්‍රිකාව/කිංෂාසා
 pref.timezone.Africa.Lagos=Africa/Lagos
 pref.timezone.Africa.Libreville=Africa/Libreville
 pref.timezone.Africa.Lome=Africa/Lome
-pref.timezone.Africa.Luanda=Africa/Luanda
+pref.timezone.Africa.Luanda=අප්‍රිකාව/ලුවන්ඩා
 pref.timezone.Africa.Lubumbashi=Africa/Lubumbashi
 pref.timezone.Africa.Lusaka=Africa/Lusaka
 pref.timezone.Africa.Malabo=Africa/Malabo
 pref.timezone.Africa.Maputo=Africa/Maputo
 pref.timezone.Africa.Maseru=Africa/Maseru
 pref.timezone.Africa.Mbabane=Africa/Mbabane
-pref.timezone.Africa.Mogadishu=Africa/Mogadishu
-pref.timezone.Africa.Monrovia=Africa/Monrovia
+pref.timezone.Africa.Mogadishu=අප්‍රිකාව/මොගඩිෂු
+pref.timezone.Africa.Monrovia=අප්‍රිකාව/මොන්රෝවියා
 pref.timezone.Africa.Nairobi=අප්‍රිකාව/නයිරෝබි
 pref.timezone.Africa.Ndjamena=Africa/Ndjamena
 pref.timezone.Africa.Niamey=Africa/Niamey
@@ -101,7 +101,7 @@ pref.timezone.Africa.Ouagadougou=Africa/Ouagadougou
 pref.timezone.Africa.Porto-Novo=Africa/Porto-Novo
 pref.timezone.Africa.Sao_Tome=Africa/Sao Tome
 pref.timezone.Africa.Tripoli=Africa/Tripoli
-pref.timezone.Africa.Tunis=Africa/Tunis
+pref.timezone.Africa.Tunis=අප්‍රිකාව/ටියුනිස්
 pref.timezone.Africa.Windhoek=Africa/Windhoek
 pref.timezone.America.Adak=America/Adak
 pref.timezone.America.Anchorage=America/Anchorage
@@ -137,7 +137,7 @@ pref.timezone.America.Cayenne=America/Cayenne
 pref.timezone.America.Cayman=America/Cayman
 pref.timezone.America.Chicago=ඇමරිකාව/චිකාගෝ
 pref.timezone.America.Chihuahua=America/Chihuahua
-pref.timezone.America.Costa_Rica=ඇමරිකාව/කෙසේටාරිකා
+pref.timezone.America.Costa_Rica=ඇමරිකාව/කොස්ටාරිකා
 pref.timezone.America.Cuiaba=America/Cuiaba
 pref.timezone.America.Curacao=America/Curacao
 pref.timezone.America.Danmarkshavn=America/Danmarkshavn
@@ -148,7 +148,7 @@ pref.timezone.America.Detroit=America/Detroit
 pref.timezone.America.Dominica=America/Dominica
 pref.timezone.America.Edmonton=America/Edmonton
 pref.timezone.America.Eirunepe=America/Eirunepe
-pref.timezone.America.El_Salvador=America/El Salvador
+pref.timezone.America.El_Salvador=ඇමරිකාව/එල්-සැල්වදෝරය
 pref.timezone.America.Fortaleza=America/Fortaleza
 pref.timezone.America.Glace_Bay=America/Glace Bay
 pref.timezone.America.Godthab=America/Godthab
@@ -176,7 +176,7 @@ pref.timezone.America.Kentucky.Louisville=America/Kentucky/Louisville
 pref.timezone.America.Kentucky.Monticello=America/Kentucky/Monticello
 pref.timezone.America.La_Paz=America/La Paz
 pref.timezone.America.Lima=ඇමරිකාව/ලීමා
-pref.timezone.America.Los_Angeles=America/Los Angeles
+pref.timezone.America.Los_Angeles=ඇමරිකාව/ලොස්-ඇන්ජලීස්
 pref.timezone.America.Maceio=America/Maceio
 pref.timezone.America.Managua=America/Managua
 pref.timezone.America.Manaus=America/Manaus
@@ -192,7 +192,7 @@ pref.timezone.America.Montevideo=America/Montevideo
 pref.timezone.America.Montreal=ඇමරිකාව/මොන්ට්‍රියල්
 pref.timezone.America.Montserrat=America/Montserrat
 pref.timezone.America.Nassau=America/Nassau
-pref.timezone.America.New_York=America/New York
+pref.timezone.America.New_York=ඇමරිකාව/නිවියෝර්ක්
 pref.timezone.America.Nipigon=America/Nipigon
 pref.timezone.America.Nome=America/Nome
 pref.timezone.America.Noronha=America/Noronha
@@ -228,7 +228,7 @@ pref.timezone.America.Thunder_Bay=America/Thunder Bay
 pref.timezone.America.Tijuana=America/Tijuana
 pref.timezone.America.Toronto=ඇමරිකාව/ටොරොන්ටෝ
 pref.timezone.America.Tortola=America/Tortola
-pref.timezone.America.Vancouver=America/Vancouver
+pref.timezone.America.Vancouver=ඇමරිකාව/වැන්කුවර්
 pref.timezone.America.Whitehorse=America/Whitehorse
 pref.timezone.America.Winnipeg=America/Winnipeg
 pref.timezone.America.Yakutat=America/Yakutat
@@ -289,7 +289,7 @@ pref.timezone.Asia.Magadan=Asia/Magadan
 pref.timezone.Asia.Makassar=Asia/Makassar
 pref.timezone.Asia.Manila=ආසියාව/මැනිලා
 pref.timezone.Asia.Muscat=ආසියාව/මස්කට්
-pref.timezone.Asia.Nicosia=Asia/Nicosia
+pref.timezone.Asia.Nicosia=ආසියාව/නිකොසියා
 pref.timezone.Asia.Novosibirsk=Asia/Novosibirsk
 pref.timezone.Asia.Omsk=Asia/Omsk
 pref.timezone.Asia.Oral=Asia/Oral
@@ -456,7 +456,7 @@ pref.timezone.America.St_Barthelemy=ඇමරිකාව/ශාන්ත බර
 # added with 0.1.2008d:
 pref.timezone.America.Argentina.San_Luis=ඇමරිකාව/අර්ජන්ටිනා/සැන් ලුයිස්
 pref.timezone.America.Santarem=ඇමරිකාව/සැන්ටරිම්
-pref.timezone.Asia.Ho_Chi_Minh=ආසියාව/ හෝ චි මින්හ්
+pref.timezone.Asia.Ho_Chi_Minh=ආසියාව/හෝ චි මින්හ්
 pref.timezone.Asia.Kolkata=ආසියාව/කොල්කටා
 
 # added with 0.1.2008i:
