--- a/si/calendar/chrome/calendar/calendar-alarms.properties
+++ b/si/calendar/chrome/calendar/calendar-alarms.properties
@@ -38,31 +38,31 @@
 # %1$S = reminderCustomUnit, %2$S = reminderCustomOrigin
 # Example: "3 minutes" "before the task starts"
 reminderCustomTitle=%1$S %2$S
-reminderTitleAtStartEvent=The moment the event starts
-reminderTitleAtStartTask=The moment the task starts
-reminderTitleAtEndEvent=The moment the event ends
-reminderTitleAtEndTask=The moment the task ends
+reminderTitleAtStartEvent=සිදුවීම ආරම්භ වන මොහොතේදී
+reminderTitleAtStartTask=කාර්යය ආරම්භ වන මොහොතේදී
+reminderTitleAtEndEvent=සිදුවීම අවසන් වන මොහොතේදී
+reminderTitleAtEndTask=කාර්යය අවසන් වන මොහොතේදී
 
-reminderCustomUnitMinutes=#1 minute;#1 minutes
-reminderCustomUnitHours=#1 hour;#1 hours 
-reminderCustomUnitDays=#1 day;#1 days
+reminderCustomUnitMinutes=විනාඩි #1 ;විනාඩි #1 
+reminderCustomUnitHours=පැය #1 ;පැය #1 
+reminderCustomUnitDays=දින #1;දින #1
 
-reminderCustomOriginBeginBeforeEvent=before the event starts
-reminderCustomOriginBeginAfterEvent=after the event starts
-reminderCustomOriginEndBeforeEvent=before the event ends
-reminderCustomOriginEndAfterEvent=after the event ends
-reminderCustomOriginBeginBeforeTask=before the task starts
-reminderCustomOriginBeginAfterTask=after the task starts
-reminderCustomOriginEndBeforeTask=before the task ends
-reminderCustomOriginEndAfterTask=after the task ends
+reminderCustomOriginBeginBeforeEvent=සිදුවීම ආරම්භ වීමට පෙර
+reminderCustomOriginBeginAfterEvent=සිදුවීම ආරම්භ වූ පසු
+reminderCustomOriginEndBeforeEvent=සිදුවීම අවසන් වීමට පෙර
+reminderCustomOriginEndAfterEvent=සිදුවීම අවසන් වූ පසු
+reminderCustomOriginBeginBeforeTask=කාර්යය ආරම්භ වීමට පෙර
+reminderCustomOriginBeginAfterTask=කාර්යය ආරම්භ වූ පසු
+reminderCustomOriginEndBeforeTask=කාර්යය අවසන් වීමට පෙර
+reminderCustomOriginEndAfterTask=කාර්යය අවසන් වූ පසු
 
 # Sorry about this, but the reminder dialog possibly needs to support changing the
 # order of its elements for some locales. This needs to be done in a different
 # bug. Please comment in bug XXX what your needs are.
-reminderDialogOriginBeginEvent=the event starts
-reminderDialogOriginEndEvent=the event ends
-reminderDialogOriginBeginTask=the task starts
-reminderDialogOriginEndTask=the task ends
+reminderDialogOriginBeginEvent=සිදුවීම ආරම්භ වේ
+reminderDialogOriginEndEvent=සිදුවීම අවසන්
+reminderDialogOriginBeginTask=කාර්යය ආරම්භ වේ
+reminderDialogOriginEndTask=කාර්යය අවසන්
 
 reminderErrorMaxCountReachedEvent=The selected calendar has a limitation of #1 reminder per event.;The selected calendar has a limitation of #1 reminders per event.
 reminderErrorMaxCountReachedTask=The selected calendar has a limitation of #1 reminder per task.;The selected calendar has a limitation of #1 reminders per task.
