language and region names fixed (http://firefox.pingviin.org/viewtopic.php?t=51)

--- a/et/toolkit/chrome/global/languageNames.properties
+++ b/et/toolkit/chrome/global/languageNames.properties
@@ -10,7 +10,7 @@ as = Assami
 ast = Astuuria
 av = Avaari
 ay = Aimaraa
-az = Aserbaižjaani
+az = Aserbaidžaani
 ba = Baškiiri
 be = Valgevene
 bg = Bulgaaria
@@ -29,7 +29,7 @@ cr = Krii
 cs = Tšehhi
 cu = Slaavi kiriku
 cv = Tšuvašši
-cy = Uelsi
+cy = Kõmri
 da = Taani
 de = Saksa
 dv = Maldiivi
@@ -41,7 +41,7 @@ eo = Esperanto
 es = Hispaania
 et = Eesti
 eu = Baski
-fa = Persia
+fa = Pärsia
 ff = Fulbe
 fi = Soome
 fj = Fidži
@@ -50,7 +50,7 @@ fr = Prantsuse
 fur = Friuli
 fy = Friisi
 ga = Iiri
-gd = Šoti Gaeli
+gd = Gaeli
 gl = Galeegi
 gn = Guaranii
 gu = Gudžarati
@@ -83,7 +83,7 @@ ki = Kikuju
 kj = Ambo
 kk = Kasahhi
 kl = Grööni
-km = Kamboža
+km = Kambodža
 kn = Kannada
 ko = Korea
 kok = Konkani
@@ -145,7 +145,7 @@ sa = Sanskriti
 sc = Sardiinia
 sd = Sindhi
 se = Põhja-Saami
-sg = Sangro
+sg = Sango
 si = Singali
 sk = Slovaki
 sl = Sloveeni
@@ -165,7 +165,7 @@ tg = Tadžiki
 th = Tai
 ti = Tigrinja
 tig = Tigree
-tk = Turkmeeni
+tk = Türkmeeni
 tl = Tagalogi
 tlh = Klingoni
 tn = Tsvana
