--- a/et/toolkit/chrome/global/regionNames.properties
+++ b/et/toolkit/chrome/global/regionNames.properties
@@ -8,7 +8,7 @@ am	=	Armeenia
 an	=	Hollandi Antillid
 ao	=	Angola
 aq	=	Antarktika
-ar	=	Argentiina
+ar	=	Argentina
 as	=	Ameerika Samoa
 at	=	Austria
 au	=	Austraalia
