--- a/et/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/et/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -26,7 +26,7 @@ invalidChar=Märki "%S" ei ole profiili nimes lubatud kasutada. Palun vali muu n
 
 deleteTitle=Profiili kustutamine
 deleteProfileConfirm=Profiili kustutamine eemaldab profiili olemasolevate profiilide nimekirjast ning seda sammu ei saa tagasi võtta.\nSa võid kustutada ka profiili andmefailid, mis sisaldavad sätteid ning sertifikaate ja muid kasutajaga seotud andmeid. See valik kustutab kausta "%S" ning seda sammu ei saa tagasi võtta.\nSoovid sa kustutada profiili andmefailid?
-deleteFiles=Failide kustutamine
+deleteFiles=Kustuta failid
 dontDeleteFiles=Ära kustuta faile
 
 profileCreationFailed=Profiili polnud võimalik luua. Võimalik, et valitud kataloogi ei lubata kirjutada.
