Bug 483845 - Update Geolocation Strings to match latest madhava mockups.

--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -139,12 +139,11 @@ editBookmarkPanel.editBookmarkTitle=Modifier ce marque-page
 # the number of bookmarks to be removed.
 editBookmark.removeBookmarks.label=Supprimer le marque-page;Supprimer les marque-pages (#1)
 
-# Geolocation UI
-geolocation.exactLocation=Localisation exacte (à 3 mètres près)
-geolocation.exactLocationKey=L
-geolocation.nothingLocation=Aucune
-geolocation.nothingLocationKey=A
-geolocation.requestMessage=%S veut savoir où vous vous trouvez. Lui indiquer :
+geolocation.tellThem=Lui indiquer
+geolocation.tellThemKey=L
+geolocation.dontTellThem=Ne pas lui indiquer
+geolocation.dontTellThemKey=N
+geolocation.siteWantsToKnow=%S veut savoir où vous vous trouvez.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
