Bug 394759 - Add undo close window feature (strings only).

--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -79,6 +79,15 @@ feedShowFeedNew=S'abonner à « %S »…
 # History menu
 menuOpenAllInTabs.label=Tout ouvrir dans des onglets
 menuOpenAllInTabs.accesskey=T
+# LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
+# see bug 394759
+menuRestoreAllWindows.label=Restaurer toutes les fenêtres
+menuRestoreAllWindows.accesskey=R
+# LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 Window Title, #2 Number of tabs
+menuUndoCloseWindowLabel=#1 (et #2 autre onglet);#1 (et #2 autres onglets)
+menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
 tabHistory.current=Rester sur cette page
