--- a/pl/suite/chrome/mailnews/search-attributes.properties
+++ b/pl/suite/chrome/mailnews/search-attributes.properties
@@ -47,7 +47,7 @@
 40=zarezerwowane dla AB
 41=zarezerwowane dla AB
 42=zarezerwowane dla AB
-43=zarezerwowane dla AB
+43=Od, Do lub Kopia
 44=Źródło statusu niechcianej poczty
 45=Prawdopodobieństwo niechcianej poczty
 46=Status załącznika
