L10n for: Bug 376089: open .eml files from the command line using relative path fails (suite part)

--- a/pl/suite/chrome/mailnews/messenger.properties
+++ b/pl/suite/chrome/mailnews/messenger.properties
@@ -415,3 +415,8 @@ emptyTrashDontAsk=Nie pytaj ponownie.
 # junkCommands.js
 junkAnalysisPercentComplete=Analiza niechcianych wiadomości. Postęp: %S
 processingJunkMessages=Przetwarzanie niechcianych wiadomości
+
+# Messenger bootstrapping messages
+fileNotFoundTitle=Nie odnaleziono pliku
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg=Plik %S nie istnieje.
