L10n for: Bug 476175 - Add search bar to Cookie Manager (Stored Cookies tab)

--- a/pl/suite/chrome/common/permissions/cookieViewer.properties
+++ b/pl/suite/chrome/common/permissions/cookieViewer.properties
@@ -53,3 +53,6 @@ deleteAllCookiesYes=Usuń
 deleteAllCookiesSites=Czy chcesz usunąć z listy wszystkie witryny?
 deleteAllSitesTitle=Usuń wszystkie witryny
 deleteAllSitesYes=Usuń
+deleteSelectedCookies=Czy na pewno usunąć wybrane ciasteczka?
+deleteSelectedCookiesTitle=Usuń wybrane ciasteczka
+deleteSelectedCookiesYes=&Usuń
