--- a/fr/toolkit/chrome/places/places.properties
+++ b/fr/toolkit/chrome/places/places.properties
@@ -3,11 +3,18 @@ BookmarksToolbarFolderTitle=Barre personnelle
 UnsortedBookmarksFolderTitle=Marque-pages non classés
 TagsFolderTitle=Étiquettes
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=Aujourd'hui
 finduri-AgeInDays-is-1=Hier
 finduri-AgeInDays-is=Il y a %S jours
+finduri-AgeInDays-last-is=Les %S derniers jours
 finduri-AgeInDays-isgreater=Il y a plus de %S jours
+finduri-AgeInMonths-is-0=Ce mois-ci
+finduri-AgeInMonths-isgreater=Il y a plus de %S mois
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(fichiers locaux)
 
 # LOCALIZATION NOTE (bookmarksArchiveFilename):
