mainly history changes 3.2

--- a/fy-NL/browser/chrome/browser/browser.properties
+++ b/fy-NL/browser/chrome/browser/browser.properties
@@ -60,8 +60,23 @@ blockedpluginsMessage.searchButton.label=Fernij ynstekkers\u2026
 blockedpluginsMessage.searchButton.accesskey=F
 
 # Sanitize
-sanitizeWithPromptLabel2=Wis resinte skiednis...
-sanitizeButton2=Privee-gegevens opskjinje
+sanitizeWithPromptLabel2=Wiskje resinte skiednis...
+# LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
+# clear" is set to "Everything", the Clear Recent History dialog's title is
+# changed to this.  See UI mockup and comment 11 at bug 480169 -->
+sanitizeDialog2.everything.title=Wiskje alle skiednis
+sanitizeButtonOK=No wiskje
+# LOCALIZATION NOTE (sanitizeEverythingWarning): Warning that appears when "Time
+# range to clear" is set to "Everything" in Clear Recent History dialog.  UI
+# mockup at bug 480169.  This value is a semi-colon list of plural forms.  #1 is
+# replaced with the number of history visits. %S is replaced with the date of
+# the oldest visit.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+sanitizeEverythingWarning=Alle skiednis sil wiske wurde.  Jo skiednis befettet ien sidebesyk s\u00FBnt %S.;Alle skiednis sil wiske wurde.  Jo skiednis befettet #1 sidebesyken s\u00FBnt %S.
+# LOCALIZATION NOTE (sanitizeEverythingNoVisitsWarning): Used in same context
+# as sanitizeEverythingWarning except this is shown instead when there are no
+# visits in the user's history.
+sanitizeEverythingNoVisitsWarning=Alle skiednis sil wiske wurde.
 
 # Check for Updates
 updatesItem_default=Kontrolearje op fernijings...
@@ -74,11 +89,22 @@ updatesItem_pending=Ynladen fernijing no tapasse...
 updatesItem_pendingFallback=Ynladen fernijing no tapasse...
   
 # RSS Pretty Print
+feedNoFeeds=Side hat gjin feeds
 feedShowFeedNew=Abonnearje op \u2018%S\u2019...
+feedHasFeedsNew=Abonnearje op dizze side...
 
 # History menu
 menuOpenAllInTabs.label=Alle bl\u00EAdwizers iepenje yn ljepbl\u00EAden
 menuOpenAllInTabs.accesskey=i
+# LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
+# see bug 394759
+menuRestoreAllWindows.label=Werstel alle skermen
+menuRestoreAllWindows.accesskey=W
+# LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 Window Title, #2 Number of tabs
+menuUndoCloseWindowLabel=#1 (en #2 oar ljepbl\u00EAd);#1 (en #2 oare ljepbl\u00EAden)
+menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
 tabHistory.current=Bliuw op dizze side
@@ -140,16 +166,11 @@ editBookmarkPanel.editBookmarkTitle=Bl\u00EAdwizer bewurkje
 editBookmark.removeBookmarks.label=Bl\u00EAdwizer fuortsmite;Bl\u00EAdwizers fuortsmite (#1)
 
 # Geolocation UI
-# LOCALIZATION NOTE (exactLocation, neighborhoodLocation): These do not have to be
-# exact value, instead approximations would be fine.
-# examples: Neighborhood (within 2 km)
-#           Exact Location (within 3 m)
-#
-geolocation.exactLocation=Eksakte Lokaasje (binnen 3 meter)
-geolocation.exactLocationKey=E
-geolocation.nothingLocation=Neat
-geolocation.nothingLocationKey=N
-geolocation.requestMessage=%S wol witte w\u00EAr't jo binne.  Fertel hen:
+geolocation.tellThem=Fertel it
+geolocation.tellThemKey=e
+geolocation.dontTellThem=Fertel it net
+geolocation.dontTellThemKey=o
+geolocation.siteWantsToKnow=%S wol jo lokaasje witte.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
