--- a/fy-NL/toolkit/chrome/places/places.properties
+++ b/fy-NL/toolkit/chrome/places/places.properties
@@ -3,11 +3,18 @@ BookmarksToolbarFolderTitle=Bl\u00EAdwizersarkbalke
 UnsortedBookmarksFolderTitle=Net sortearre bl\u00EAdwizers
 TagsFolderTitle=Labels
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=Hjoed
 finduri-AgeInDays-is-1=Juster
 finduri-AgeInDays-is=%S dagen lyn
+finduri-AgeInDays-last-is=L\u00EAst %S dagen
+finduri-AgeInDays-isgreater=Alder aa %S dagen
+finduri-AgeInMonths-is-0=Dizze moanne
 finduri-AgeInDays-isgreater=Alder as %S dagen
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(lokale bestannen)
 
 # LOCALIZATION NOTE (bookmarksBackupFilename & bookmarksArchiveFilename):
