--- a/fy-NL/toolkit/chrome/places/places.properties
+++ b/fy-NL/toolkit/chrome/places/places.properties
@@ -8,18 +8,18 @@ TagsFolderTitle=Labels
 finduri-AgeInDays-is-0=Hjoed
 finduri-AgeInDays-is-1=Juster
 finduri-AgeInDays-is=%S dagen lyn
-finduri-AgeInDays-last-is=L\u00EAst %S dagen
-finduri-AgeInDays-isgreater=Alder aa %S dagen
-finduri-AgeInMonths-is-0=Dizze moanne
+finduri-AgeInDays-last-is=L\u00EAste %S dagen
 finduri-AgeInDays-isgreater=Alder as %S dagen
+finduri-AgeInMonths-is-0=Dizze moanne
+finduri-AgeInMonths-isgreater=Alder as %S moannen
 
 # LOCALIZATION NOTE (localFiles):
 # This is used to generate local files container when history is grouped by site
 localhost=(lokale bestannen)
 
-# LOCALIZATION NOTE (bookmarksBackupFilename & bookmarksArchiveFilename):
-# %S will be replaced by the current date in ISO 8601 format, YYYY-MM-DD.
-# The resulting string will be suggested as a filename, so make sure that you're
-# only using characters legal for file names. Consider falling back to the
-# en-US value if you have to use non-ascii characters.
+# LOCALIZATION NOTE (bookmarksArchiveFilename):
+# Do not change this string! It's used only to
+# detect older localized bookmark archives from
+# before bug 445704 was fixed. It will be removed
+# in a subsequent release.
 bookmarksArchiveFilename=bl\u00EAdwizers-%S.json
