--- a/de/toolkit/chrome/places/places.properties
+++ b/de/toolkit/chrome/places/places.properties
@@ -3,11 +3,18 @@ BookmarksToolbarFolderTitle=Lesezeichen-Symbolleiste
 UnsortedBookmarksFolderTitle=Unsortierte Lesezeichen
 TagsFolderTitle=Schlagwörter
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=Heute
 finduri-AgeInDays-is-1=Gestern
 finduri-AgeInDays-is=Vor %S Tagen
+finduri-AgeInDays-last-is=Letzte %S Tage
 finduri-AgeInDays-isgreater=Älter als %S Tage
+finduri-AgeInMonths-is-0=In diesem Monat
+finduri-AgeInMonths-isgreater=Älter als %S Monate
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(lokale Dateien)
 
 # LOCALIZATION NOTE (bookmarksArchiveFilename):
