--- a/nl/toolkit/chrome/places/places.properties
+++ b/nl/toolkit/chrome/places/places.properties
@@ -3,11 +3,18 @@ BookmarksToolbarFolderTitle=Bladwijzerwerkbalk
 UnsortedBookmarksFolderTitle=Ongesorteerde bladwijzers
 TagsFolderTitle=Labels
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=Vandaag
 finduri-AgeInDays-is-1=Gisteren
 finduri-AgeInDays-is=%S dagen geleden
+finduri-AgeInDays-last-is=Laatste %S dagen
 finduri-AgeInDays-isgreater=Ouder dan %S dagen
+finduri-AgeInMonths-is-0=Deze maand
+finduri-AgeInMonths-isgreater=Ouder dan %S maanden
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(lokale bestanden)
 
 # LOCALIZATION NOTE (bookmarksArchiveFilename):
