--- a/cs/browser/chrome/browser/browser.properties
+++ b/cs/browser/chrome/browser/browser.properties
@@ -140,16 +140,11 @@ editBookmarkPanel.editBookmarkTitle=Upravit tuto záložku
 editBookmark.removeBookmarks.label=Odstranit záložku;Odstranit #1 záložky;Odstranit #1 záložek
 
 # Geolocation UI
-# LOCALIZATION NOTE (exactLocation, neighborhoodLocation): These do not have to be
-# exact value, instead approximations would be fine.
-# examples: Neighborhood (within 2 km)
-#           Exact Location (within 3 m)
-#
-geolocation.exactLocation=Přesnou polohu (okolí 3m)
-geolocation.exactLocationKey=e
-geolocation.nothingLocation=Nic
-geolocation.nothingLocationKey=N
-geolocation.requestMessage=%S si přeje znát vaši zeměpisnou polohu. Prozradíte:
+geolocation.tellThem=Prozradit
+geolocation.tellThemKey=P
+geolocation.dontTellThem=Neprozradit
+geolocation.dontTellThemKey=N
+geolocation.siteWantsToKnow=%S si přeje znát vaši polohu.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
