--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -465,6 +465,11 @@ emptyTrashDontAsk=Příště se již neptat.
 junkAnalysisPercentComplete=Analýza nevyžádané pošty: %S% hotovo
 processingJunkMessages=Zpracování nevyžádané pošty
 
+# Messenger bootstrapping messages
+fileNotFoundTitle=Soubor nenalezen
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg=Soubor %S nebyl nenalezen.
+
 # second person direct object pronoun; used in the collapsed header view if
 # the user is in the To or Cc field of a message
 headerFieldYou=já
