--- a/cs/suite/chrome/mailnews/messenger.properties
+++ b/cs/suite/chrome/mailnews/messenger.properties
@@ -421,3 +421,8 @@ emptyTrashDontAsk=Příště se již neptat.
 # junkCommands.js
 junkAnalysisPercentComplete=Rozpoznání nevyžádané pošty hotovo z %S
 processingJunkMessages=Zpracovávám nevyžádanou poštu
+
+# Messenger bootstrapping messages
+fileNotFoundTitle=Soubor nenalezen
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg=Soubor %S nebyl nenalezen.
