--- a/cs/toolkit/chrome/global/dateFormat.properties
+++ b/cs/toolkit/chrome/global/dateFormat.properties
@@ -11,15 +11,16 @@
 # for the specific language governing rights and limitations under the
 # License.
 #
-# The Original Code is mozilla.org code.
+# The Original Code is OEone Calendar Code, released October 31st, 2001.
 #
 # The Initial Developer of the Original Code is
-# Netscape Communications Corporation.
-# Portions created by the Initial Developer are Copyright (C) 1998
-# the Initial Developer. All Rights Reserved.
+# OEone Corporation.
+# Portions created by OEone Corporation are Copyright (C) 2001
+# OEone Corporation. All Rights Reserved.
 #
 # Contributor(s):
-#   Ben Goodger
+#   Garth Smedley <garths@oeone.com>
+#   Martin Schroeder <mschroeder@mozilla.x-home.org>
 #
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -35,24 +36,57 @@
 #
 # ***** END LICENSE BLOCK *****
 
-# note this section of the code may require some tinkering in other languages =(
-# format in dialog: site [can/cannot] set cookies
-can=server může uložit cookies
-cannot=server nemůže uložit cookies
-canSession=stránka může nastavit cookies pro relaci
-domain=Doména, ze které cookie přichází:
-host=Server, který poslal cookie:
-hostColon=Server:
-domainColon=Doména:
-forSecureOnly=Pouze šifrovaná spojení
-forAnyConnection=Jakýkoliv typ spojení
-expireAtEndOfSession=Na konci relace
-deleteAllCookies=Chcete skutečně odebrat všechny cookies?
-deleteAllCookiesTitle=Odebrání všech cookies
-deleteAllCookiesYes=&Odebrat
-deleteAllCookiesSites=Chcete skutečně odebrat všechny webové servery ze seznamu?
-deleteAllSitesTitle=Odebrání všech serverů
-deleteAllSitesYes=&Odebrat
-deleteSelectedCookies=Chcete skutečně odebrat označené cookies?
-deleteSelectedCookiesTitle=Odebrání označených cookies
-deleteSelectedCookiesYes=&Odebrat
+month.1.Mmm=Led
+month.2.Mmm=Úno
+month.3.Mmm=Bře
+month.4.Mmm=Dub
+month.5.Mmm=Kvě
+month.6.Mmm=Čvn
+month.7.Mmm=Čnc
+month.8.Mmm=Srp
+month.9.Mmm=Zář
+month.10.Mmm=Říj
+month.11.Mmm=Lis
+month.12.Mmm=Pro
+
+month.1.name=Leden
+month.2.name=Únor
+month.3.name=Březen
+month.4.name=Duben
+month.5.name=Květen
+month.6.name=Červen
+month.7.name=Červenec
+month.8.name=Srpen
+month.9.name=Září
+month.10.name=Říjen
+month.11.name=Listopad
+month.12.name=Prosinec
+
+day.1.name=neděle
+day.2.name=pondělí
+day.3.name=úterý
+day.4.name=středa
+day.5.name=čtvrtek
+day.6.name=pátek
+day.7.name=sobota
+
+day.1.Mmm=Ne
+day.2.Mmm=Po
+day.3.Mmm=Út
+day.4.Mmm=St
+day.5.Mmm=Čt
+day.6.Mmm=Pá
+day.7.Mmm=So
+
+day.1.short=Ne
+day.2.short=Po
+day.3.short=Út
+day.4.short=St
+day.5.short=Čt
+day.6.short=Pá
+day.7.short=So
+
+noon=Poledne
+midnight=Půlnoc
+
+AllDay=Celý den
