--- a/cs/toolkit/chrome/places/places.properties
+++ b/cs/toolkit/chrome/places/places.properties
@@ -3,11 +3,18 @@ BookmarksToolbarFolderTitle=Lišta záložek
 UnsortedBookmarksFolderTitle=Nesetříděné záložky
 TagsFolderTitle=Štítky
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=Dnes
 finduri-AgeInDays-is-1=Včera
-finduri-AgeInDays-is=%S dny/í zpět
+finduri-AgeInDays-is=Před %S dny
+finduri-AgeInDays-last-is=Poslední/ch %S dny/ů
 finduri-AgeInDays-isgreater=Starší než %S dny/ů
+finduri-AgeInMonths-is-0=Tento měsíc
+finduri-AgeInMonths-isgreater=Starší než %S měsíce/ů
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(místní soubor)
 
 # LOCALIZATION NOTE (bookmarksArchiveFilename):
