update moz-centr toolkit

--- a/pl/toolkit/chrome/places/places.properties
+++ b/pl/toolkit/chrome/places/places.properties
@@ -4,11 +4,18 @@ BookmarksToolbarFolderTitle=Pasek zakładek
 UnsortedBookmarksFolderTitle=Zakładki nieprzypisane
 TagsFolderTitle=Etykiety
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=Dzisiaj
 finduri-AgeInDays-is-1=Wczoraj
 finduri-AgeInDays-is=%S dni temu
+finduri-AgeInDays-last-is=Ostatnie %S dni
 finduri-AgeInDays-isgreater=Starsze niż %S dni
+finduri-AgeInMonths-is-0=Ten miesiąc
+finduri-AgeInMonths-isgreater=Starsze niż %S miesięcy
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(pliki lokalne)
 
 # LOCALIZATION NOTE (bookmarksArchiveFilename):
