--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -61,7 +61,22 @@ blockedpluginsMessage.searchButton.accesskey=A
 
 # Sanitize
 sanitizeWithPromptLabel2=Wyczyść historię przeglądania…
-sanitizeButton2=Wyczyść dane prywatne
+# LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
+# clear" is set to "Everything", the Clear Recent History dialog's title is
+# changed to this.  See UI mockup and comment 11 at bug 480169 -->
+sanitizeDialog2.everything.title=Wyczyść całą historię
+sanitizeButtonOK=Wyczyść teraz
+# LOCALIZATION NOTE (sanitizeEverythingWarning): Warning that appears when "Time
+# range to clear" is set to "Everything" in Clear Recent History dialog.  UI
+# mockup at bug 480169.  This value is a semi-colon list of plural forms.  #1 is
+# replaced with the number of history visits. %S is replaced with the date of
+# the oldest visit.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+sanitizeEverythingWarning=Cała historia zostanie wyczyszczona. Historia zawiera jedną stronę odwiedzoną od %S.;Cała historia zostanie wyczyszczona. Historia zawiera #1 strony odwiedzone od %S.;Cała historia zostanie wyczyszczona. Historia zawiera #1 stron odwiedzonych od %S.
+# LOCALIZATION NOTE (sanitizeEverythingNoVisitsWarning): Used in same context
+# as sanitizeEverythingWarning except this is shown instead when there are no
+# visits in the user's history.
+sanitizeEverythingNoVisitsWarning=Cała historia zostanie wyczyszczona.
 
 # Check for Updates
 updatesItem_default=Sprawdź dostępność aktualizacji…
@@ -79,6 +94,16 @@ feedShowFeedNew=Subskrybuj "%S"…
 # History menu
 menuOpenAllInTabs.label=Otwórz wszystkie w kartach
 menuOpenAllInTabs.accesskey=O
+
+# LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
+# see bug 394759
+menuRestoreAllWindows.label=Przywróć wszystkie okna
+menuRestoreAllWindows.accesskey=P
+# LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 Window Title, #2 Number of tabs
+menuUndoCloseWindowLabel=#1 (i #2 inna karta);#1 (i #2 inne karty);#1 (i #2 innych kart)
+menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
 tabHistory.current=Pozostań na tej stronie
@@ -138,16 +163,11 @@ editBookmarkPanel.editBookmarkTitle=Edytuj tę zakładkę
 editBookmark.removeBookmarks.label=Usuń zakładkę;Usuń zakładki (#1);Usuń zakładki (#1)
 
 # Geolocation UI
-# LOCALIZATION NOTE (exactLocation, neighborhoodLocation): These do not have to be
-# exact value, instead approximations would be fine.
-# examples: Neighborhood (within 2 km)
-#           Exact Location (within 3 m)
-#
-geolocation.exactLocation=dokładne położenie (w promieniu 3 m)
-geolocation.exactLocationKey=d
-geolocation.nothingLocation=Nie przekazuj
-geolocation.nothingLocationKey=N
-geolocation.requestMessage=%S chce poznać położenie geograficzne użytkownika. Przekaż:
+geolocation.tellThem=Przekaż informacje
+geolocation.tellThemKey=e
+geolocation.dontTellThem=Nie przekazuj
+geolocation.dontTellThemKey=N
+geolocation.siteWantsToKnow=%S chce poznać położenie geograficzne użytkownika.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
