--- a/pl/browser/chrome/browser/pageInfo.properties
+++ b/pl/browser/chrome/browser/pageInfo.properties
@@ -76,7 +76,7 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=Ta witryna dostarcza certyfikat umożliwiający potwierdzenie jej tożsamości
-securityNoIdentity=Ta witryna nie dostarcza informacji na temat swej tożsamości
+securityNoOwner=Ta witryna nie dostarcza informacji na temat swych właścicieli.
+
 securityOneVisit=Tak, raz
 securityNVisits=Tak, %S razy
