aviary.pl 2373 minor rewording in search.properties

--- a/pl/browser/chrome/browser/search.properties
+++ b/pl/browser/chrome/browser/search.properties
@@ -3,7 +3,7 @@ searchtip=Szukaj w %S
 cmd_clearHistory=Wyczyść historię wyszukiwania
 cmd_clearHistory_accesskey=W
 
-cmd_showSuggestions=Wyświetl podpowiedzi
+cmd_showSuggestions=Wyświetlaj podpowiedzi
 cmd_showSuggestions_accesskey=p
 
 cmd_addFoundEngine=Dodaj "%S"
