--- a/sv-SE/toolkit/chrome/places/places.properties
+++ b/sv-SE/toolkit/chrome/places/places.properties
@@ -3,11 +3,18 @@ BookmarksToolbarFolderTitle=Bokmärkesfältet
 UnsortedBookmarksFolderTitle=Osorterade bokmärken
 TagsFolderTitle=Taggar
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=Idag
 finduri-AgeInDays-is-1=Igår
 finduri-AgeInDays-is=%S dagar sedan
+finduri-AgeInDays-last-is=Senaste %S dagarna
 finduri-AgeInDays-isgreater=Äldre än %S dagar
+finduri-AgeInMonths-is-0=Den här månaden
+finduri-AgeInMonths-isgreater=Äldre än %S månader
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(lokala filer)
 
 # LOCALIZATION NOTE (bookmarksArchiveFilename):
