L10n for bug 483845 - Update Geolocation Strings to match latest madhava mockups.

--- a/sv-SE/browser/chrome/browser/browser.properties
+++ b/sv-SE/browser/chrome/browser/browser.properties
@@ -169,16 +169,11 @@ editBookmarkPanel.editBookmarkTitle=Redigera detta bokmärke
 editBookmark.removeBookmarks.label=Ta bort bokmärke;Ta bort bokmärken (#1)
 
 # Geolocation UI
-# LOCALIZATION NOTE (exactLocation, neighborhoodLocation): These do not have to be
-# exact value, instead approximations would be fine.
-# examples: Neighborhood (within 2 km)
-#           Exact Location (within 3 m)
-#
-geolocation.exactLocation=Exakt position (inom 3 meter)
-geolocation.exactLocationKey=E
-geolocation.nothingLocation=Inget
-geolocation.nothingLocationKey=n
-geolocation.requestMessage=%S vill veta var du befinner dig.  Ge dem:
+geolocation.tellThem=Berätta för dom
+geolocation.tellThemKey=B
+geolocation.dontTellThem=Berätta inte för dom
+geolocation.dontTellThemKey=e
+geolocation.siteWantsToKnow=%S vill veta var du befinnner dig.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
